<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Calculation Method"
            android:entries="@array/pref_calculation_methods"
            android:entryValues="@array/pref_calculation_method_values"
            android:key="@string/key_calculation_method"
            android:title="Calculation Method" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_alarm_sound_switch"
            android:summary="Turn adhan sound on or off"
            android:title="Adhan Sound" />

        <SwitchPreference
            android:key="@string/key_daylight_savings_switch"
            android:summary="Toggle daylight savings"
            android:title="Daylisht Savings" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Adhans">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_fajr_switch"
            android:summary="Fajr Alarm"
            android:title="Fajr" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_dhur_switch"
            android:summary="Dhur Alarm"
            android:title="Dhur" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_asr_switch"
            android:summary="Asr Alarm"
            android:title="Asr" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_maghrib_switch"
            android:summary="Maghrib Alarm"
            android:title="Maghrib" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_isha_switch"
            android:summary="Isha Alarm"
            android:title="Isha" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Location Settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_location_adhan"
            android:summary="Only play the adhan in your house"
            android:title="Location aware Adhan" />

        <Preference
            android:title="Set Home Location"
            android:selectable="true"
            android:summary="Set your home location"
            android:key="@string/key_home_location"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">
        <Preference
            android:title="Version"
            android:selectable="false"
            android:summary="NUMBER HERE"
            android:key="key_version"
            />

        <!--
                <Preference
                    android:summary="@string/app_version"
                    android:title="@string/title_version" />
        -->

        <!--        <Preference
                    android:key="@string/key_send_feedback"
                    android:summary="@string/summary_support"
                    android:title="@string/title_send_feedback" />-->

        <!--        <Preference android:title="@string/title_terms">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="@string/url_terms" />
                </Preference>-->
    </PreferenceCategory>


</PreferenceScreen>